Change initial-code slightly

--- a/initial_page/src/document.html
+++ b/initial_page/src/document.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <p>Welcome to my toy lambda, which deploys from my machine in a run of a single script! Cool!</p>
+        <p>Stubbed lambda</p>
     </body>
 </html>
