--- a/macho-nonsense-webpage/src/document.html
+++ b/macho-nonsense-webpage/src/document.html
@@ -36,8 +36,8 @@
         Not a good one! When people feel that they are on eggshells trying to navigate the male ego they are unlikely
         to produce the kind of fast, quality feedback that a team needs in order to thrive! If problems occur and are
         not addressed because the solution is to tell Rob that he was wrong and needs to just stop, but we think that'll
-        cause him to sulk and be worse than useless, then maybe we'll just leave it. That's a bad outcome, and it happened
-        because Rob's macho nonsense caused the team to feel unsafe.
+        cause him to sulk and be worse than useless, then maybe we'll just leave it. That's a bad outcome, and it
+        happened because Rob's macho nonsense caused the team to feel unsafe.
     </p>
 </body>
 
