--- a/inhibitions-are-not-a-solution-for-an-attitude-problem-webpage/src/document.html
+++ b/inhibitions-are-not-a-solution-for-an-attitude-problem-webpage/src/document.html
@@ -14,7 +14,7 @@
         interaction I thought to myself, "What the fuck was that?". It was fairly harmless thankfully, but still bad. The day's
         clearest abnormality was that I had not slept the night before. I had also learnt from my friend Peter Brown the night
         before at XTC that poor sleep seriously affects mental performance. I learnt that yesterday. I already knew that the only
-        reason I'm not an arrogant prick ALL the time is because I can stop myself. This combined knowledge helped me to see that
+        reason I'm not an arrogant prick <em>all</em> the time is because I can stop myself. This combined knowledge helped me to see that
         those who are dependent on fast brain performance for their desired personality will be unable to socially interact in
         the way that want when their thinking is badly retarded, for example when they are sleep deprived. This is an
         unacceptable outcome and me and my brain will be having a chat about it's SLAs later.
