--- a/inhibitions-are-not-a-solution-for-an-attitude-problem-webpage/src/document.html
+++ b/inhibitions-are-not-a-solution-for-an-attitude-problem-webpage/src/document.html
@@ -50,7 +50,7 @@
         night's XTC - "Deconstructing macho bullshit in software."
     </p>
     <h3 style="color: orange; margin-left: 30%; margin-right: 30%">
-        Was this all just mental gymnastics to absolve yourself of being a dickhead?
+        Did you seriously just do all that mental gymnastics just to absolve yourself of being a dickhead?
     </h3>
     <p style="margin-left: 30%; margin-right: 30%; line-height: 2">
         Left as an exercise for the reader.
