Learnt how to use <meta charset="UTF-8"> for georgian characters

--- a/georgian-who-are-you-webpage/src/document.html
+++ b/georgian-who-are-you-webpage/src/document.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8"> 
     <title>შენ ხარ?</title>
 </head>
 
@@ -10,7 +11,9 @@
     <h1 align="center">შენ ხარ?</h1>
     <h3 style="color: orange; margin-left: 30%; margin-right: 30%">შენ ხარ?</h3>
     <p style="margin-left: 30%; margin-right: 30%; line-height: 2">
-        მე მქვია რობი.
+        მქვია რობი და ბრიტანელი ვარ. მყავს ბევრ მეგობრები ამიტომ იღბლიანი ვარ. მე არასდროს ვყოფილვარ საქართველოში, მაგრამ მინდა,
+        იმიტომ რომ მე ბევრ ახლ კულტურას ვნახავ. მე ქართულ ენას მეგობარითან სწავლობ. ჩემი კართული მეგობარი საკურა გქვია. მე
+        ქართულ ენას ვსწავლობდი იმიტომ რომ ის არის ექსპრესიული და ის აქვს ლამაზ ანვანის.
     </p>
 </body>
 
