Use relative query string

--- a/resourceful-lambda-webpage/src/document.html
+++ b/resourceful-lambda-webpage/src/document.html
@@ -3,8 +3,7 @@
 
 <head>
     <title>Title</title>
-    <link rel="stylesheet" type="text/css"
-        href="https://brkpof30da.execute-api.eu-west-2.amazonaws.com/default/resourceful-lambda-webpage?resource=css">
+    <link rel="stylesheet" type="text/css" href="?resource=css">
 </head>
 
 <body bgcolor="#f9f9f9">
