Update template lambda to use loaded css script

--- a/initial-page/src/document.html
+++ b/initial-page/src/document.html
@@ -3,13 +3,14 @@
 
 <head>
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="?resource=css">
 </head>
 
 <body bgcolor="#f9f9f9">
     <h4 align="center">Date</h4>
     <h1 align="center">Title</h1>
-    <h3 style="color: orange; margin-left: 30%; margin-right: 30%">Subheading 1</h3>
-    <p style="margin-left: 30%; margin-right: 30%; line-height: 2">
+    <h3 class="subheading">Subheading 1</h3>
+    <p class="articletext">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
@@ -17,8 +18,7 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
         of Lorem Ipsum.
     </p>
-    <pre
-        style="margin-left: 30%; margin-right: 30%; border-style: solid; border-width: 1px; border-color: black; border-radius: 5px; font-size: 150%; padding: 10px">
+    <pre class="codesnippet">
 const fs = require('fs')
 
 exports.handler = async (event) => {
@@ -32,8 +32,8 @@ exports.handler = async (event) => {
     }
     return response
 }</pre>
-    <h3 style="color: orange; margin-left: 30%; margin-right: 30%">Subheading 2</h3>
-    <p style="margin-left: 30%; margin-right: 30%; line-height: 2">
+    <h3 class="subheading">Subheading 2</h3>
+    <p class="articletext">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
